apps/api/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: api
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      run: api
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
      - image: gcr.io/contrarains/api:latest
        name: api
        ports:
        - containerPort: 3000
