apps/api/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
  labels:
    run: api
  name: api
spec:
  containers:
      image: gcr.io/contrarains/api:latest
      name: api
      ports:
        - containerPort: 3000
          hostPort: 80
          protocol: TCP
      resources: {}
  restartPolicy: OnFailure
status: {}
