apps/api/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
     run: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
