apps/api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: test
spec:
  rules:
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
